fixed vertical-align problem with social container

--- a/FinalTask/bonfire/Magento_Catalog/web/css/source/_extend.less
+++ b/FinalTask/bonfire/Magento_Catalog/web/css/source/_extend.less
@@ -377,6 +377,9 @@
     .review-ratings ~ .review-content, .review-ratings ~ .review-details {
         margin-left: 110px;
     }
+    .product-info-main .product-social-links .social_wrapper > * > *:last-child {
+        vertical-align: middle;
+    }
 }
 //desctop
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
